# iphonesms

./: CMakeLists.txt  README.md
source/: Message.h  StringUtf8.h  iPhoneSms.cpp
